<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/common_bg"
	>		
	<!-- Banner -->
    <RelativeLayout 
        android:id="@+id/more_relativelayout_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
		>
		<ImageView 
			android:id="@+id/more_imageview_banner_backgroundmiddle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/common_banner_bg"
			android:contentDescription="@null" 
			/>
		<TextView 
		    android:id="@+id/more_textview_banner_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/more_banner_title"
		    style="@style/Banner_Title"
		    android:layout_centerInParent="true"
		    />
	</RelativeLayout>
	
    <!-- Content -->
    <ScrollView
        android:id="@+id/more_scrollview_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/more_relativelayout_banner"
        android:layout_alignParentBottom="true"
        android:background="@null">
	  <RelativeLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="15dip"
        android:layout_gravity="top"
        android:layout_marginRight="15dip"
        android:orientation="vertical"
        android:background="@null">
	      <!-- Tab(我的收藏|消息推送) -->
	      <RelativeLayout	           
	          android:id="@+id/more_relativelayout_tab_container"
	          android:layout_width="match_parent"
	          android:layout_marginTop="15dip"
	          android:layout_height="70dip"
	          >
	          <ImageView 
				android:id="@+id/more_imageview_tab_background"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/more_tab_bg"
				android:contentDescription="@null" 
				/>    
	          <ImageView 
			    android:id="@+id/more_imageview_tab_divider"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:layout_marginTop="5dip"
			    android:layout_marginBottom="5dip"
			    android:layout_centerInParent="true"
			    android:src="@drawable/more_tab_divider"
			    android:contentDescription="@null" 
			    />   
	          <TextView
	              android:id="@+id/more_textview_tab_mycollection"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:layout_centerInParent="true"
	              android:layout_toLeftOf="@id/more_imageview_tab_divider"
	              android:layout_marginRight="40dip"
	              android:drawableTop="@drawable/more_tab_mycollection"
	              android:text="@string/more_tab_collection"
	              style="@style/More_Tab"/>
	          <TextView
	              android:id="@+id/more_textview_tab_msgpush"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:layout_centerInParent="true"
	              android:layout_toRightOf="@id/more_imageview_tab_divider"
	              android:layout_marginLeft="40dip"
	              android:drawableTop="@drawable/more_tab_msgpush"
	              android:text="@string/more_tab_msgpush"
	              style="@style/More_Tab"/>
	      </RelativeLayout>  
	      
	      <!-- 设置选项 -->
	      <RelativeLayout 
	          android:id="@+id/more_relativelayout_content_container"
	          android:layout_width="match_parent"
	          android:layout_height="match_parent"
	          android:layout_below="@id/more_relativelayout_tab_container"
	          android:layout_alignParentBottom="true"
	          android:layout_marginBottom="10dip"
	          android:layout_marginTop="10dip"
	          android:background="@drawable/more_tab_bg"
	          >
	          <!-- 正文字号 -->
	          <RelativeLayout 
	              android:id="@+id/more_relativelayout_fontsize"
	              android:layout_width="match_parent"
				  android:layout_height="45dip"
	              >
		          <TextView
		          	android:id="@+id/more_textview_fontsize_title"
		          	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_centerVertical="true"
		         	android:layout_alignParentLeft="true"
		         	android:layout_marginLeft="15dip"
		         	android:text="@string/more_content_fontsize"
		        	style="@style/More_Content"/>           
		          <ImageView 
					android:id="@+id/more_imageview_fontsize_arrow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"    
					android:background="@drawable/more_arrow"
					android:contentDescription="@null" 
					/>
		          <TextView
		              android:id="@+id/more_textview_fontsize"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_toLeftOf="@id/more_imageview_fontsize_arrow"
		              android:layout_centerVertical="true"
		              android:layout_marginRight="15dip"             
		              android:text="@string/more_content_fontsize_middle"
		              style="@style/More_Content"/>   
	         </RelativeLayout>
	         <!-- divider1 -->
	         <ImageView 
				android:id="@+id/more_imageview_divider1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_fontsize"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"  
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	        <!-- 无图模式 -->
	 		<RelativeLayout 
	      		android:id="@+id/more_relativelayout_setnoimage"
	       		android:layout_width="match_parent"
	       		android:layout_below="@id/more_imageview_divider1"
				android:layout_height="45dip"
	     		>   
	   			<TextView
	       			android:id="@+id/more_textview_setnoimage"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_setnoimage"
	              	style="@style/More_Content"/>           
	          	<ImageView 
					android:id="@+id/more_imageview_setnoimage_selectbg"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"
					android:background="@drawable/more_switch_bg"
					android:contentDescription="@null" 
				/>
	          	<ImageView 
					android:id="@+id/more_imageview_setnoimage_selecticon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:background="@drawable/more_switch_icon"
					android:layout_alignRight="@id/more_imageview_setnoimage_selectbg"
					android:contentDescription="@null" 
				/>
	          </RelativeLayout>
	        <!-- divider4 -->
	        <ImageView 
				android:id="@+id/more_imageview_divider2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_setnoimage"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	        <!-- 清理缓存 -->
	 		<RelativeLayout 
	      		android:id="@+id/more_relativelayout_cleancache"
	       		android:layout_width="match_parent"
	       		android:layout_below="@id/more_imageview_divider2"
				android:layout_height="45dip"
	     		>
	          	<TextView
	       			android:id="@+id/more_textview_cleancache"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_cleancache"
	              	style="@style/More_Content"/>           
	          	<TextView 
					android:id="@+id/more_textview_cachesize"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"
					android:text="@string/more_content_cacheunit"
					style="@style/More_Content"
				/>   
	        </RelativeLayout>
	        <!-- divider5 -->
	        <ImageView 
				android:id="@+id/more_imageview_divider3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_cleancache"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	        <!-- 新版本检测 -->
	 		<RelativeLayout 
	      		android:id="@+id/more_relativelayout_update"
	       		android:layout_width="match_parent"
	       		android:layout_below="@id/more_imageview_divider3"
				android:layout_height="45dip"
	     		>
	          	<TextView
	       			android:id="@+id/more_textview_update"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_update"
	              	style="@style/More_Content"/>           
	        	<ImageView 
					android:id="@+id/more_imageview_update_arrow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"    
					android:background="@drawable/more_arrow"
					android:contentDescription="@null" 
					/>
	        </RelativeLayout>
	        <!-- divider6 -->
	        <ImageView 
				android:id="@+id/more_imageview_divider4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_update"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
			<!-- 闹钟声音 -->
			<RelativeLayout 
	     		android:id="@+id/more_relativelayout_alarmvoice"
	        	android:layout_width="match_parent"
				android:layout_height="45dip"
				android:layout_below="@id/more_imageview_divider4"
	        	>
				<TextView
		  			android:id="@+id/more_textview_alarmvoice_title"
		          	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_centerVertical="true"
		         	android:layout_alignParentLeft="true"
		         	android:layout_marginLeft="15dip"
		         	android:text="@string/more_content_alarmvoice"
		        	style="@style/More_Content"/>           
		          <ImageView 
					android:id="@+id/more_imageview_alarmvoice_arrow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"    
					android:background="@drawable/more_arrow"
					android:contentDescription="@null" 
					/>
		          <TextView
		              android:id="@+id/more_textview_alarmvoice"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_toLeftOf="@id/more_imageview_alarmvoice_arrow"
		              android:layout_centerVertical="true"
		              android:layout_marginRight="15dip"             
		              android:text="@string/more_content_alarmvoice_men"
		              style="@style/More_Content"/>   
	         </RelativeLayout>
	         <!-- divider7 -->
	         <ImageView 
				android:id="@+id/more_imageview_divider5"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_alarmvoice"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"  
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	         
	        <!-- 消息推送 -->
			<RelativeLayout 
	     		android:id="@+id/more_relativelayout_pushswitch"
	        	android:layout_width="match_parent"
				android:layout_height="45dip"
				android:layout_below="@id/more_imageview_divider5"
	        	>
				<TextView
	       			android:id="@+id/more_textview_pushswitch"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_pushswitch"
	              	style="@style/More_Content"/>           
	          	<ImageView 
					android:id="@+id/more_imageview_pushswitch_selectbg"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"
					android:background="@drawable/more_switch_bg"
					android:contentDescription="@null" 
				/>
	          	<ImageView 
					android:id="@+id/more_imageview_pushswitch_selecticon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:background="@drawable/more_switch_icon"
					android:layout_alignRight="@id/more_imageview_pushswitch_selectbg"
					android:contentDescription="@null" 
				/>
	         </RelativeLayout>
	         <!-- divider8 -->
	         <ImageView 
				android:id="@+id/more_imageview_divider6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_pushswitch"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"  
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	        <!-- 微博绑定 -->
			<RelativeLayout 
	     		android:id="@+id/more_relativelayout_bindweibo"
	        	android:layout_width="match_parent"
				android:layout_height="45dip"
				android:layout_below="@id/more_imageview_divider6"
	        	>
				<TextView
	       			android:id="@+id/more_textview_bindweibo"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_bindweibo"
	              	style="@style/More_Content"/>           
	          	<ImageView 
					android:id="@+id/more_imageview_bindweibo_arrow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"    
					android:background="@drawable/more_arrow"
					android:contentDescription="@null" 
				/> 
	         </RelativeLayout>
	         <!-- divider7 -->
	         <ImageView 
				android:id="@+id/more_imageview_divider7"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_bindweibo"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"  
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	         <!-- 投票资料 -->
			<RelativeLayout 
	     		android:id="@+id/more_relativelayout_vote"
	        	android:layout_width="match_parent"
				android:layout_height="45dip"
				android:layout_below="@id/more_imageview_divider7"
	        	>
				<TextView
	       			android:id="@+id/more_textview_vote"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_vote"
	              	style="@style/More_Content"/>           
	          	<ImageView 
					android:id="@+id/more_imageview_vote_arrow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"    
					android:background="@drawable/more_arrow"
					android:contentDescription="@null" 
				/> 
	         </RelativeLayout>
	         <!-- divider7 -->
	         <ImageView 
				android:id="@+id/more_imageview_divider8"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/more_relativelayout_vote"
				android:layout_marginRight="5dip"
				android:layout_marginLeft="5dip"  
				android:background="@drawable/more_content_divider"
				android:contentDescription="@null" 
				/>
	                  
	       	<!-- 联系我们 -->
	 		<RelativeLayout 
	      		android:id="@+id/more_relativelayout_contactus"
	       		android:layout_width="match_parent"
	       		android:layout_below="@id/more_imageview_divider8"
				android:layout_height="45dip"
	     		>
	          	<TextView
	       			android:id="@+id/more_textview_contactus"
	        		android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"
	              	android:layout_alignParentLeft="true"
	              	android:layout_centerVertical="true"
	           		android:layout_marginLeft="15dip"
	              	android:text="@string/more_content_contactus"
	              	style="@style/More_Content"/>           
	          	<ImageView 
					android:id="@+id/more_imageview_contactus_arrow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dip"    
					android:background="@drawable/more_arrow"
					android:contentDescription="@null" 
				/> 
	        </RelativeLayout>
	      </RelativeLayout>  
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>