<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    >
    <!--头部Logo区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
    </LinearLayout>

    <!--信息输入操作区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:weightSum="11"
        android:layout_marginTop="10dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:text="@string/phone_login"
            android:layout_marginLeft="16dip"
            style="@style/login_title"
            android:layout_marginTop="5dip"/>

TextInputLayout:
    app:hintEnabled="true"//设置是否可以使用hint属性，默认是true
    app:hintAnimationEnabled="true"//设置是否可以使用动画，默认是true
    app:hintTextAppearance="@style/hintAppearance"//设置hint的文本属性，改变hint文字的大小颜色等属性
    app:counterEnabled="true"//设置是否可以开启计数器，默认是false
    app:counterOverflowTextAppearance="@style/counterOverflowTextAppearance"//设置计算器越位后的文字颜色和大小
    app:counterTextAppearance="@style/hintAppearance"//设置正常情况下的计数器文字颜色和大小
    app:counterMaxLength="11"//设置计算器的最大字数限制
    app:errorEnabled="true"//是否允许错误提示，默认是true
    app:errorTextAppearance="@style/errorAppearance"//错误提示的文字大小和颜色
    app:passwordToggleEnabled="true"//设置是否显示密码眼睛,默认是false
    app:passwordToggleDrawable="@mipmap/ic_launcher"//自定义眼睛图标
    app:passwordToggleTint="@color/colorAccent"//给眼睛着色
    app:passwordToggleTintMode="multiply"//选择着色模式,与passwordToggleTint一起用
-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layout_username"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:layout_marginHorizontal="10dip"

            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:counterOverflowTextAppearance="@style/counterOverflowTextAppearance"
            app:errorTextAppearance="@style/errorAppearance"
            app:hintTextAppearance="@style/hintAppearance">

            <cn.edu.cuc.logindemo.userlayout.ValidationEditText
                android:id="@+id/vetxt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/et_del_image"
                android:drawableStart="@drawable/register_phone"
                android:hint="@string/hint_user"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layout_psw"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:theme="@style/TextInputLayoutLineColor"
            android:layout_weight="2"
            android:layout_marginHorizontal="10dip"
            android:layout_marginTop="10dip"

            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:counterOverflowTextAppearance="@style/counterOverflowTextAppearance"
            app:errorTextAppearance="@style/errorAppearance"
            app:hintTextAppearance="@style/hintAppearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <cn.edu.cuc.logindemo.userlayout.ValidationEditText
                android:id="@+id/vetxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/login_pwd"
                android:hint="@string/hint_psw"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dip"
            android:layout_marginHorizontal="15dip"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_bg_normal_login"/>

    </LinearLayout>

    <!--第三方登录与隐私与免责声明区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:weightSum="2"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="30dip"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_qq"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="30dip"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_weixin"/>
                </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
